dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)

AM_INIT_AUTOMAKE(tapbs, 0.2)

AC_LANG_CPLUSPLUS
AC_PROG_CXX

dnl Ask for APBS libraries
AC_ARG_WITH(apbs,
    [ --with-apbs=<path> prefix of APBS 0.4 installation. e.g. /usr/local or /usr],
    [APBS_PREFIX=$with_apbs],
    AC_MSG_ERROR([You must call configure with the --with-apbs option.
    This tells configure where to find the APSB 0.4 C library and headers.
    e.g. --with-apbs=/usr/local or --with-apbs=/usr])
)

dnl Ask for BLAS libraries
AC_ARG_WITH(blas,
    [ --with-blas=<path> linker specification for external BLAS library],
    [BLAS=$with_blas],
    AC_MSG_ERROR([You must call configure with the --with-blas option.
    This tells configure how to link the BLAS library.
    e.g. --with-blas='-L/usr/local/Linux_ATHLON/lib -llapack -lcblas -lf77blas -latlas'])
)

AC_SUBST(APBS_PREFIX)
 APBS_LIBS="-L${APBS_PREFIX}/lib/ -lapbsmainroutines -lapbs -lblas -lmaloc -L/usr/lib -lgfortran "
 APBS_CFLAGS="-I${APBS_PREFIX}/include"
 AC_SUBST(APBS_LIBS)
 AC_SUBST(APBS_CFLAGS)

AC_OUTPUT(Makefile src/Makefile)
