## Makefile.am -- Process this file with automake to produce Makefile.in
bin_PROGRAMS = tapbs
tapbs_SOURCES = main.cpp titration.cpp titratable.cpp apbswrapper.cpp Cartesian.cpp PQR.cpp parser.cpp potential.cpp utils.cpp
noinst_HEADERS = titration.h titratable.h apbswrapper.h Cartesian.h PQR.h parser.h potential.h utils.h exceptions.h 
INCLUDES = $(APBS_CFLAGS)
LIBS = $(APBS_LIBS)
